[package]
name = "arkworks-mimc"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff = { version = "^0.3.0", default-features = false }
ark-r1cs-std = { version = "^0.3.0", default-features = false }
ark-std = { version = "^0.3.0", default-features = false }
ark-relations = { version = "^0.3.0", default-features = false }
ark-crypto-primitives = { version = "^0.3.0", default-features = false }

[dev-dependencies]
ark-std = { version = "^0.3.0", default-features = false, features = ["print-trace"] }
ark-bn254 = { version = "^0.3.0", default-features = false, features = ["curve"] }

[features]
default = []
r1cs = ["ark-crypto-primitives/r1cs"]
mimc_220_bn254 = []
mimc_220_bls12_381 = []
mimc_91_bn254 = []
mimc_91_bls12_381 = []
