[package]
name = "arkworks-mimc"
version = "0.3.0"
edition = "2021"
repository = "https://github.com/Tetration-Lab/arkworks-mimc"
description = "Arkworks implementation of cryptographic hash function MiMC"
license = "LGPL-3.0-only"

[dependencies]
ark-ff = { version = "^0.3.0", default-features = false }
ark-r1cs-std = { version = "^0.3.0", default-features = false }
ark-std = { version = "^0.3.0", default-features = false }
ark-relations = { version = "^0.3.0", default-features = false }
ark-crypto-primitives = { version = "^0.3.0", default-features = false }
tiny-keccak = { version = "^2.0.2", default-features = false, optional = true }
rug = { version = "1.19.1", default-features = false, optional = true }

[dev-dependencies]
ark-std = { version = "^0.3.0", default-features = false, features = ["print-trace"] }
ark-bn254 = { version = "^0.3.0", default-features = false, features = ["curve"] }

[features]
default = []
paramgen = ["tiny-keccak/keccak", "rug/float"]
r1cs = ["ark-crypto-primitives/r1cs"]
mimc-5-220-bn254 = []
mimc-5-220-bls12-381 = []
mimc-5-218-bls12-377 = []
mimc-7-91-bn254 = []
mimc-7-91-bls12-381 = []
mimc-7-90-bls12-377 = []
